kubernetes/ingress-dashboard.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress-2
  namespace: kubernetes-dashboard
  annotations:    
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/issuer: "letsencrypt-staging"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"     
    #  nginx.ingress.kubernetes.io/rewrite-target: / 
    #  nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/dashboard)$ $1/ permanent;   
spec: 
  tls:
  - hosts: 
    - dashboard.k8.brettmostert.com
    secretName: dashboard-secret-1
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress-1
  namespace: kubernetes-dashboard
  annotations:    
     kubernetes.io/ingress.class: "nginx"       
     cert-manager.io/issuer: "letsencrypt-staging"     
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #  nginx.ingress.kubernetes.io/rewrite-target: / 
    #  nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/dashboard)$ $1/ permanent;   
spec: 
  tls:
  - hosts: 
    - dashboard.k8.brettmostert.com
    secretName: dashboard-secret-1
  rules:
  - host: dashboard.k8.brettmostert.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
