kubernetes/ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress-1
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"    
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts: 
    - k8.brettmostert.com
    secretName: nginx-example-tls-5
  rules:
  - host: k8.brettmostert.com
    http:
      paths: 
      - path: /nginx
        backend:
          serviceName: nginx-service
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress-2
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /    
spec:
  tls:
    - hosts: 
      - k8.brettmostert.com
      secretName: nginx-example-tls-5
  rules:
  - host: 
    http:
      paths: 
      - path: /nginx
        backend:
          serviceName: nginx-service
          servicePort: 80
